--- a/lesson1/songjincheng/myweb/templates/accounts/login.html
+++ b/lesson1/songjincheng/myweb/templates/accounts/login.html
@@ -39,11 +39,11 @@
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" name="username" placeholder="Username">
+        <input type="text" class="form-control" id="username" name="username" placeholder="Username">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" name="password" placeholder="Password">
+        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
