--- a/lesson8/panweihan/templates/index.html
+++ b/lesson8/panweihan/templates/index.html
@@ -93,6 +93,7 @@
                 <ul class="treeview-menu">
             	    <li class="opsli"><a href="/sqlmng/inception_commit/" target="mainPage"><i class="fa fa-circle-o"></i>审核</a></li>
             	    <li class="opsli"><a href="/sqlmng/inception_list/" target="mainPage"><i class="fa fa-circle-o"></i>处理</a></li>
+                    <li class="opsli"><a href="/sqlmng/inc_show/" target="mainPage"><i class="fa fa-circle-o"></i>检测</a></li>
                 </ul>
             </li>
 
